--- a/app/src/main/res/layout/activity_carmer.xml
+++ b/app/src/main/res/layout/activity_carmer.xml
@@ -100,6 +100,12 @@
             android:layout_height="wrap_content"
             android:text="촬영" />
 
+        <Button
+            android:id="@+id/btn_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="완료" />
+
 
     </LinearLayout>
 </LinearLayout>
