결과 화면 버튼 이벤트
버튼이벤트 추가완료
이미지 받아오고
세번째로 큰 정확도 포맷받아오기

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -16,5 +16,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text=""/>
+        android:text="로딩이 될때 까지 기다려 주세요..."
+        android:textSize="28dp"/>
 </LinearLayout>
