--- a/app/src/main/res/layout/activity_carmer.xml
+++ b/app/src/main/res/layout/activity_carmer.xml
@@ -17,88 +17,20 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <ImageView
-            android:id="@+id/imageViewId"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/result1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/result1_percent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/first_detail_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="자세히 보기" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/result2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/result2_percent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/second_detail_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="자세히 보기" />
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/first_test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/second_test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:textSize="20dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_cature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="촬영" />
+            android:text="다시 촬영" />
 
         <Button
             android:id="@+id/btn_complete"
