--- a/app/src/main/res/layout/first_plant.xml
+++ b/app/src/main/res/layout/first_plant.xml
@@ -36,13 +36,13 @@
                 android:gravity="center"
                 android:textSize="50dp" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/flower_img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="50dp" />
+                />
 
             <TextView
                 android:id="@+id/flower_flower"
@@ -57,7 +57,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="20dp" />
-
 
 
         </LinearLayout>
